--- a/studies-ml.tex
+++ b/studies-ml.tex
@@ -1,7 +1,7 @@
-% file:	studies-ml.tex
-% author:	Jacob Xie
-% date:	2023/03/11 23:43:51 Saturday
-% brief:
+% @file:	  studies-ml.tex
+% @author:	Jacob Xie
+% @date:	  2023/03/11 23:43:51 Saturday
+% @brief:
 
 \PassOptionsToPackage{quiet}{fontspec}
 \documentclass[UTF8]{ctexart}
@@ -21,7 +21,7 @@
 
 \input{commands.tex}
 
-
+\setlength\parindent{0pt}
 
 % ================================================================================================
 % Main
@@ -37,6 +37,66 @@
 \maketitle
 \newpage
 
-WIP
+\refstepcounter{section}
+\section{模型评估与选择}
+\subfile{starter/model_evaluation_and_selection.tex}
+\newpage
+
+\section{线性模型}
+% \subfile{}
+\newpage
+
+\section{决策树}
+% \subfile{}
+\newpage
+
+\section{神经网络}
+% \subfile{}
+\newpage
+
+\section{支持向量机}
+% \subfile{}
+\newpage
+
+\section{贝叶斯分类器}
+% \subfile{}
+\newpage
+
+\section{集成学习}
+% \subfile{}
+\newpage
+
+\section{聚类}
+% \subfile{}
+\newpage
+
+\section{降维与度量学习}
+% \subfile{}
+\newpage
+
+\section{特征选择与稀疏学习}
+% \subfile{}
+\newpage
+
+\section{计算学习理论}
+% \subfile{}
+\newpage
+
+\section{半监督学习}
+% \subfile{}
+\newpage
+
+\section{概率图模型}
+% \subfile{}
+\newpage
+
+\section{规则学习}
+% \subfile{}
+\newpage
+
+\section{强化学习}
+% \subfile{}
+\newpage
+
 
 \end{document}
