--- a/studies-ml.tex
+++ b/studies-ml.tex
@@ -46,7 +46,7 @@
 \newpage
 
 \section{线性模型}
-% \subfile{}
+\subfile{basics/linear_model.tex}
 \newpage
 
 \section{决策树}
@@ -54,7 +54,7 @@
 \newpage
 
 \section{神经网络}
-% \subfile{}
+\subfile{intermediate/neural_networks.tex}
 \newpage
 
 \section{支持向量机}
