--- a/studies-ml.tex
+++ b/studies-ml.tex
@@ -11,10 +11,13 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
 \usepackage{xcolor}
 \usepackage{graphicx}
 \graphicspath{\subfix{./images/}}
 \usepackage{listings}
+\usepackage{enumerate}
 \usepackage{hyperref}
 \usepackage{tabularx}
 \usepackage{multirow}
