--- a/commands.tex
+++ b/commands.tex
@@ -15,3 +15,10 @@
 \newcommand{\anote}{
 	\paragraph*{Note}
 }
+
+% force indent
+\newcommand{\aidnt}[1][1]{
+	\foreach \n in {1,...,{#1}}{
+			\hspace{\parindent}
+		}
+}
