--- a/studies-ml.tex
+++ b/studies-ml.tex
@@ -23,6 +23,7 @@
 \graphicspath{\subfix{./images/}}
 \usepackage{enumerate}
 \usepackage{hyperref}
+\usepackage{parskip}
 \usepackage[most]{tcolorbox}
 \usepackage{tabularx}
 \usepackage{multirow}
