--- a/studies-ml.tex
+++ b/studies-ml.tex
@@ -81,6 +81,8 @@
 \section{神经网络}
 \subfile{intermediate/neural_networks.tex}
 \newpage
+\subfile{intermediate/ResNet_and_CNN.tex}
+\newpage
 
 \section{支持向量机}
 % \subfile{}
