chore: mv files

--- a/notes-watermelon.tex
+++ b/notes-watermelon.tex
@@ -55,7 +55,7 @@
 % Main
 % ================================================================================================
 
-\title{Studies ML}
+\title{Notes Watermelon}
 \author{Jacob Xie}
 \date{2023-03-11}
 
@@ -67,11 +67,11 @@
 
 \refstepcounter{section}
 \section{模型评估与选择}
-\subfile{starter/model_evaluation_and_selection.tex}
+\subfile{notes-watermelon/model_evaluation_and_selection.tex}
 \newpage
 
 \section{线性模型}
-\subfile{basics/linear_model.tex}
+\subfile{notes-watermelon/linear_model.tex}
 \newpage
 
 \section{决策树}
@@ -79,9 +79,9 @@
 \newpage
 
 \section{神经网络}
-\subfile{intermediate/neural_networks.tex}
+\subfile{notes-watermelon/neural_networks.tex}
 \newpage
-\subfile{intermediate/ResNet_and_CNN.tex}
+\subfile{notes-watermelon/ResNet_and_CNN.tex}
 \newpage
 
 \section{支持向量机}
