chore: init notes-dmfa

--- a/notes-emfa.tex
+++ b/notes-emfa.tex
@@ -1,6 +1,6 @@
-% @file:  studies-ml.tex
+% @file:	notes-emfa.tex
 % @author:	Jacob Xie
-% @date:  2023/03/11 23:43:51 Saturday
+% @date:	2023/04/29 21:35:16 Saturday
 % @brief:
 
 \PassOptionsToPackage{quiet}{fontspec}
@@ -54,9 +54,9 @@
 % Main
 % ================================================================================================
 
-\title{Notes Watermelon}
+\title{Notes EMFA}
 \author{Jacob Xie}
-\date{2023-03-11}
+\date{2023-04-29}
 
 \numberwithin{equation}{section}
 \begin{document}
@@ -64,68 +64,6 @@
 \maketitle
 \newpage
 
-\refstepcounter{section}
-\section{模型评估与选择}
-\subfile{notes-watermelon/model_evaluation_and_selection.tex}
-\newpage
-
-\section{线性模型}
-\subfile{notes-watermelon/linear_model.tex}
-\newpage
-
-\section{决策树}
-% \subfile{}
-\newpage
-
-\section{神经网络}
-\subfile{notes-watermelon/neural_networks.tex}
-\newpage
-\subfile{notes-watermelon/ResNet_and_CNN.tex}
-\newpage
-
-\section{支持向量机}
-% \subfile{}
-\newpage
-
-\section{贝叶斯分类器}
-% \subfile{}
-\newpage
-
-\section{集成学习}
-% \subfile{}
-\newpage
-
-\section{聚类}
-% \subfile{}
-\newpage
-
-\section{降维与度量学习}
-% \subfile{}
-\newpage
-
-\section{特征选择与稀疏学习}
-% \subfile{}
-\newpage
-
-\section{计算学习理论}
-% \subfile{}
-\newpage
-
-\section{半监督学习}
-% \subfile{}
-\newpage
-
-\section{概率图模型}
-% \subfile{}
-\newpage
-
-\section{规则学习}
-% \subfile{}
-\newpage
-
-\section{强化学习}
-% \subfile{}
-\newpage
-
+WIP
 
 \end{document}
